Shang New Live/src/objects/Cash_Detail__c.object
<CustomObject>
    <fields>
        <fullName>Amount_Paid_Local_WF__c</fullName>
        <label>Amount Paid (Local)</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Amount_Paid_Local__c</fullName>
        <formula>IF (  TExt ( Currency_Code__c )!= &quot;MMK&quot;, 
 Amount_Paid__c *  Parent_Exchange_Rate__c , 
Amount_Paid__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Amount Paid (Local)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Amount_Paid__c</fullName>
        <label>Amount Paid</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cash_Receipt__c</fullName>
        <label>Cash Receipt</label>
        <referenceTo>Cash_Receipt__c</referenceTo>
        <relationshipLabel>Cash Details</relationshipLabel>
        <relationshipName>Cash_Details</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Cheque_No__c</fullName>
        <label>Cheque No</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Currency_Code__c</fullName>
        <label>Currency Code</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Currency_Code</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Deposit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Deposit</label>
        <referenceTo>Deposit__c</referenceTo>
        <relationshipLabel>Cash Details</relationshipLabel>
        <relationshipName>Cash_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Invoice_Total_Amount_Foreign__c</fullName>
        <formula>Invoice__r.Total_Amount_Foreign__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Invoice Total Amount (Foreign)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Invoice_Total_Amount_Local__c</fullName>
        <formula>Invoice__r.Total_Amount_Local__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Invoice Total Amount (Local)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Invoice_Total_Amount__c</fullName>
        <formula>Invoice__r.Total_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Invoice Total Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Invoice__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Invoice</label>
        <referenceTo>Invoice__c</referenceTo>
        <relationshipLabel>Cash Details</relationshipLabel>
        <relationshipName>Cash_Details1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Paid__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Paid</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Parent_Exchange_Rate__c</fullName>
        <formula>IF (NOT(ISBLANK( Invoice__c )),  Invoice__r.Exchange_Rate__c , 
 Deposit__r.Exchange_Rate__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent Exchange Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Payment_Date__c</fullName>
        <formula>Cash_Receipt__r.Payment_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Payment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Payment_Mode__c</fullName>
        <label>Payment Mode</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Payment_Mode</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Payment_Voucher__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Payment Voucher</label>
        <referenceTo>Payment_Voucher__c</referenceTo>
        <relationshipLabel>Cash Details</relationshipLabel>
        <relationshipName>Cash_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Refund_Mode__c</fullName>
        <label>Refund Mode</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Refund_Mode</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Remarks__c</fullName>
        <label>Remarks</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Void_Datetime__c</fullName>
        <label>Void Datetime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Void__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Controlled by Cash Receipt trigger</description>
        <label>Void</label>
        <type>Checkbox</type>
    </fields>
    <label>Cash Detail</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Payment_Mode__c</field>
            <operation>equals</operation>
            <value>Credit Note</value>
        </filters>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{YYYY}-{MM}-CD-{000000}</displayFormat>
        <label>Cash Detail No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Cash Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>